--- a/src/stylesheets/PhoneList.scss
+++ b/src/stylesheets/PhoneList.scss
@@ -1,1 +1,10 @@
 @import './core/_variables';
+
+.list {
+  &__container {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(20, 1fr);
+  }
+}
