set switch and route component to render modal

--- a/src/stylesheets/PhoneItem.scss
+++ b/src/stylesheets/PhoneItem.scss
@@ -2,6 +2,7 @@
 
 .card {
   &__container {
+    text-decoration: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
