--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -1,6 +1,18 @@
 @import './core/_variables';
 
 .modal {
+  &__background {
+    background-color: rgba(221, 221, 221, 0.6);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
+  &__dialog {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   &__container {
     display: flex;
     flex-direction: column;
