--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -1,4 +1,12 @@
 // color palette
+$white: #f6f6f6;
+$grey: #575767;
+$blue: #04a9ee;
+$green: #17ae8e;
+$shadow: #e4e4e4;
+
+// backgrounds
+$modal: $white;
 
 // fonts
 $mainFont: 'Source Sans Pro', sans-serif;
