--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -12,6 +12,8 @@
 
 .header {
   &__container {
+    padding: 1rem 1.5rem;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
