--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -10,14 +10,19 @@
   &__dialog {
     height: 100%;
     display: flex;
+    // flex-direction: column;
     justify-content: center;
     align-items: center;
   }
   &__container {
+    height: 25rem;
+    border: 0.25rem solid fuchsia;
+    background-color: $modal;
     display: flex;
     flex-direction: column;
   }
   &__header {
+    padding: 1.5rem 1rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -29,8 +34,12 @@
   }
   &__img {
     border: 0.2rem solid purple;
+    margin-left: 1rem;
+    width: 50rem;
   }
   &__properties {
+    padding: 1.5rem 2.5rem 1.5rem 0;
+    // padding: 1rem 1rem 1rem 0;
     border: 0.2rem solid orange;
   }
   &__list {
