--- a/src/stylesheets/PhoneList.scss
+++ b/src/stylesheets/PhoneList.scss
@@ -2,6 +2,8 @@
 
 .list {
   &__container {
+    padding: 0;
+    margin: 1rem 0 1rem 0;
     list-style: none;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
