update modal styles

--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -1,9 +1,10 @@
 // color palette
-$white: #f6f6f6;
+$white: white;
+// $white: #f6f6f6;
 $grey: #575767;
 $blue: #04a9ee;
 $green: #17ae8e;
-$shadow: #e4e4e4;
+$shadow: #bebebe;
 
 // backgrounds
 $modal: $white;
