--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -4,22 +4,23 @@
   &__background {
     background-color: rgba(221, 221, 221, 0.6);
     position: absolute;
-    height: 100%;
-    width: 100%;
-  }
-  &__dialog {
-    height: 100%;
     display: flex;
-    // flex-direction: column;
+    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  &__dialog {
+    width: 100%;
+    border: 0.25rem solid fuchsia;
   }
   &__container {
-    height: 25rem;
-    border: 0.25rem solid fuchsia;
-    background-color: $modal;
+    margin: 0 1rem;
+    background-color: $white;
     display: flex;
     flex-direction: column;
+    box-shadow: 2px 2px 10px $shadow;
   }
   &__header {
     padding: 1.5rem 1rem;
@@ -28,21 +29,67 @@
     justify-content: space-between;
   }
   &__info {
+    margin: 1rem;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   &__img {
-    border: 0.2rem solid purple;
-    margin-left: 1rem;
-    width: 50rem;
+    height: 50vh;
+    margin-bottom: 0.5rem;
   }
   &__properties {
-    padding: 1.5rem 2.5rem 1.5rem 0;
-    // padding: 1rem 1rem 1rem 0;
-    border: 0.2rem solid orange;
+    padding: 1rem;
   }
   &__list {
     list-style: none;
+    padding: 0;
+  }
+  &__listItem {
+    margin-bottom: 0.5rem;
+  }
+}
+
+// responsive
+
+@media all and (min-width: 768px) {
+  .modal {
+    &__container {
+      width: 80vw;
+    }
+    &__info {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    &__properties {
+      margin-right: 2rem;
+    }
+    &__listItem {
+      margin-bottom: 1.5rem;
+    }
+  }
+}
+
+@media all and (min-width: 1200px) {
+  .modal {
+    &__container {
+      width: 50vw;
+    }
+    &__info {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 2.5rem;
+    }
+    &__properties {
+      margin-right: 2rem;
+    }
+    &__listItem {
+      margin-bottom: 2rem;
+    }
   }
 }
