--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -11,10 +11,10 @@
     width: 100%;
     height: 100%;
   }
-  &__dialog {
-    width: 100%;
-    border: 0.25rem solid fuchsia;
-  }
+  // &__dialog {
+  //   width: 100%;
+  //   border: 0.25rem solid fuchsia;
+  // }
   &__container {
     margin: 0 1rem;
     background-color: $white;
@@ -63,12 +63,13 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      margin-bottom: 2rem;
     }
     &__properties {
       margin-right: 2rem;
     }
     &__listItem {
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
   }
 }
@@ -83,7 +84,7 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      margin-bottom: 2.5rem;
+      margin-bottom: 2rem;
     }
     &__properties {
       margin-right: 2rem;
