set link to go back to main page

--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -28,6 +28,9 @@
     flex-flow: row nowrap;
     justify-content: space-between;
   }
+  &__icon {
+    height: 1.5rem;
+  }
   &__info {
     margin: 1rem;
     display: flex;
