--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -12,12 +12,22 @@
 
 .header {
   &__container {
-    padding: 1rem 1.5rem;
+    padding: 2.5rem 0 2rem 0;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 20vh;
+  }
+  &__title {
+    font-size: 2.15rem;
+    text-transform: capitalize;
+  }
+  &__small {
+    font-size: 2.15rem;
+    background: linear-gradient(60deg, $blue 15%, $green 85%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
 
