--- a/src/stylesheets/PhoneList.scss
+++ b/src/stylesheets/PhoneList.scss
@@ -2,10 +2,11 @@
 
 .list {
   &__container {
-    padding: 0;
+    padding: 0 2.5rem;
     margin: 1rem 0 1rem 0;
     list-style: none;
     display: grid;
+    row-gap: 1rem;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(8, 1fr);
   }
@@ -17,6 +18,7 @@
   .list {
     &__container {
       display: grid;
+      column-gap: 1rem;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(4, 1fr);
     }
@@ -27,6 +29,8 @@
   .list {
     &__container {
       display: grid;
+      row-gap: 2rem;
+      column-gap: 2rem;
       grid-template-columns: repeat(4, 1fr);
       grid-template-rows: repeat(2, 1fr);
     }
