--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -29,7 +29,13 @@
     justify-content: space-between;
   }
   &__icon {
-    height: 1.5rem;
+    font-size: 1.5rem;
+    color: $grey;
+    &:hover {
+      background: linear-gradient(60deg, $blue 15%, $green 85%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
   }
   &__info {
     margin: 1rem;
