--- a/src/stylesheets/PhoneItemDetail.scss
+++ b/src/stylesheets/PhoneItemDetail.scss
@@ -3,18 +3,15 @@
 .modal {
   &__background {
     background-color: rgba(221, 221, 221, 0.6);
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
   }
-  // &__dialog {
-  //   width: 100%;
-  //   border: 0.25rem solid fuchsia;
-  // }
+
   &__container {
     margin: 0 1rem;
     background-color: $white;
