--- a/src/stylesheets/_PhoneItemDetail.scss
+++ b/src/stylesheets/_PhoneItemDetail.scss
@@ -18,9 +18,10 @@
     display: flex;
     flex-direction: column;
     box-shadow: 2px 2px 10px $shadow;
+    height: 95vh;
   }
   &__header {
-    padding: 1.5rem 1rem;
+    padding: 1rem 1rem 0 1rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -35,15 +36,14 @@
     }
   }
   &__info {
-    margin: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 0.75rem;
   }
   &__img {
-    height: 50vh;
-    margin-bottom: 0.5rem;
+    height: 30vh;
   }
   &__properties {
     padding: 1rem;
@@ -62,14 +62,23 @@
 @media all and (min-width: 768px) {
   .modal {
     &__container {
+      height: auto;
       width: 80vw;
     }
+    &__header {
+      padding: 1.5rem 1.5rem 0 1.5rem;
+    }
     &__info {
+      margin: 1rem;
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
       margin-bottom: 2rem;
+      font-size: inherit;
+    }
+    &__img {
+      height: 50vh;
     }
     &__properties {
       margin-right: 2rem;
@@ -84,6 +93,9 @@
   .modal {
     &__container {
       width: 50vw;
+    }
+    &__header {
+      padding: 2rem 2rem 0 2rem;
     }
     &__info {
       display: flex;
